Update libraries and fix various mistakes around whole project. Sort methods by name&parameters instead of reading order from .class file.